# prueba_hypermodern

./: .gitignore  README.md  pyproject.toml
src/hypermodern_python/: console.py
tests/: .coverage  test_console.py
