[project]
name = "prueba-hypermodern"
version = "0.1.0"
description = ""
authors = [
    {name = "BrunoMenegozzo",email = "brunomenegozzo@mi.unc.edu.ar"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# pyproject.toml
[tool.poetry]
name = "prueba-hypermodern"
version = "0.1.0"
description = ""
packages = [{ include = "hypermodern_python", from = "src" }]



[tool.poetry.scripts]
hypermodern_python = "hypermodern_python.console:main"
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
coverage = {extras = ["toml"], version = "^7.6.12"}
pytest-cov = "^6.0.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true

